tests/parser-test-files/bad-files/parse-while-let.8.error
error: Malformed while-let expression
  --> test:4:36
   |
 4 |  (define f (while-let :label foo nope))
   |                                      ^ expected =
